# kuncie-ai-academy

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/dummy-knowledge/: Peraturan-Perusahaan-LoreIpsum.txt
notes/: 01_langchain_integration.ipynb  02_rag_pipeline.ipynb  03_security_guardrails.ipynb  04_performance_evaluation.ipynb
notes/.ipynb_checkpoints/: 01_langchain_integration-checkpoint.ipynb
