[project]
name = "f5-kuncie-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deepeval>=4.0.7",
    "jupyterlab>=4.6.1",
    "langchain>=1.3.12",
    "langchain-azure-ai>=1.2.3",
    "langchain-google-genai>=4.2.7",
    "langchain-qdrant>=1.1.0",
    "langfuse>=4.13.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
]
